--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -27,3 +27,9 @@
 .dragging {
   opacity: 1; /* Makes it look like it’s being dragged */
 }
+/* .datePicker{
+  width:100%
+} */
+ .calendar{
+  background:blue
+ }
